<resources>
    <string name="app_name">Inventaris Toko</string>
    <string name="product_name">Product Name        :</string>
    <string name="quantity">Quantity            :</string>
    <string name="isi">isinya....</string>
    <string name="minus">-</string>
    <string name="sell">Sell</string>
    <string name="price">Price          	    :</string>
    <string name="Rp">Rp100.000,-</string>
    <string name="supplier_contact">"Supplier Contact    :"</string>
    <string name="save_product">Save Detail Product</string>
    <string name="fill_with_product_name">Fill with product name …</string>
    <string name="fill_with_product_price">Fill with product price …</string>
    <string name="fill_with_product_quantity">Fill with product quantity …</string>
    <string name="fill_with_product_supplier_contact">Fill with product supplier\'s contact …</string>
    <string name="_0">0</string>
    <string name="still_empty">Still empty</string>
    <string name="let_s_add_your_product">Let\'s add your product</string>
    <string name="image_for_empty">Image For Empty</string>
    <string name="save">Save</string>
    <string name="insert_dummy_data">Insert Dummy Data</string>
    <string name="delete_all_products">Delete All Products</string>
    <string name="deleted_all_products">All Products Deleted</string>
    <string name="there_is_no_product_in_here">There is no product in here...</string>
    <string name="let_s_add_a_product">Let\'s add a product</string>
    <string name="product_saved">Product Saved!</string>
    <string name="error_saving_product">Error with saving product!</string>
    <string name="product_updated">Product Updated!</string>
    <string name="error_updating_product">Error with updating product!</string>
    <string name="saved_product">Save Product</string>
    <string name="updated_product">Update Product</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>

    <!-- Toast message in editor when current pet was successfully deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_product_successful">Product deleted</string>

    <!-- Toast message in editor when current pet has failed to be deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_product_failed">Error with deleting product</string>

    <!-- Dialog message to ask the user to confirm deleting the current pet [CHAR LIMIT=NONE] -->
    <string name="delete_dialog_msg">Delete this product?</string>

    <!-- Dialog button text for the option to confirm deleting the current pet [CHAR LIMIT=20] -->
    <string name="delete">Delete</string>

    <!-- Dialog button text for the option to cancel deletion of the current pet [CHAR LIMIT=20] -->
    <string name="cancel">Cancel</string>
    <string name="empty_cart">Empty Cart</string>
    <string name="delete_all_product_dialog_msg">Delete All the products?</string>
    <string name="about">About</string>

</resources>