<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="#FCFCFF"
    app:cardCornerRadius="20dp"
    android:layout_marginEnd="10dp"
    app:cardElevation="20dp"
    android:layout_marginStart="10dp"
    android:padding="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginBottom="10dp"
        android:background="#FCFCFF"
        android:layout_marginStart="4dp"
        android:orientation="vertical"
        android:paddingTop="4dp">

        <TextView
            android:id="@+id/product_name"
            android:layout_width="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginStart="6dp"
            android:text="@string/product_name"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_product_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_marginStart="8dp"
            android:maxLines="3"
            android:layout_marginBottom="5dp"
            android:layout_toEndOf="@id/product_name"
            android:hint="@string/isi"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/product_name"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="6dp"
            android:text="@string/price"
            android:textColor="@android:color/black"
            android:layout_marginTop="3dp"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/product_name"
            android:layout_marginStart="12dp"
            android:layout_marginBottom="5dp"
            android:layout_toEndOf="@id/price"
            android:layout_marginTop="3dp"
            android:hint="@string/Rp"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_price"
            android:layout_marginStart="6dp"
            android:layout_marginBottom="5dp"
            android:text="@string/quantity"
            android:layout_marginTop="3dp"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_quantity"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_below="@id/quantity"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:layout_marginStart="6dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="5dp"
            android:background="@android:color/white"
            android:hint="@string/_0"
            android:textStyle="normal"
            android:textColorHint="@android:color/black"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:layout_alignParentStart="true" />

        <Button
            android:id="@+id/btn_minus"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_below="@id/quantity"
            android:focusable="false"
            android:layout_marginStart="7dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="5dp"
            android:layout_toEndOf="@id/tv_quantity"
            android:background="@drawable/button_shape_corner"
            style="@style/Widget.AppCompat.Button.Colored"
            android:text="@string/sell"
            android:textColor="@android:color/white"
            android:textSize="12sp" />


    </RelativeLayout>


</androidx.cardview.widget.CardView>