<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#EFEEEE"
    android:layout_height="match_parent"
    tools:context=".activity.ListActivity">

    <ListView
        android:id="@+id/listview_inventaris"
        android:layout_width="match_parent"
        android:dividerHeight="10.0sp"
        android:headerDividersEnabled="true"
        android:footerDividersEnabled="true"
        android:divider="@android:color/white"
        android:layout_height="match_parent" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_centerInParent="true"
        android:layout_height="wrap_content"
        android:id="@+id/empty_view">
        <ImageView
            android:id="@+id/empty_shelter_image"
            android:layout_centerHorizontal="true"
            android:src="@drawable/basket"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/empty_cart" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/empty_title_text"
            android:layout_below="@id/empty_shelter_image"
            android:layout_centerHorizontal="true"
            android:fontFamily="sans-serif-medium"
            android:paddingTop="16dp"
            android:text="@string/there_is_no_product_in_here"
            android:textAppearance="?android:textAppearanceMedium"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/empty_subtitle_text"
            android:layout_below="@id/empty_title_text"
            android:layout_centerHorizontal="true"
            android:fontFamily="sans-serif"
            android:text="@string/let_s_add_a_product"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="#A2AAB0"
            android:paddingTop="8dp"/>
    </RelativeLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_button"
        android:layout_width="154dp"
        android:layout_height="154dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:src="@drawable/add_product" />
</RelativeLayout>